--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-  <div class="col-12">
+<section id="introduction">
+    <div class="container">
+    <div class="row fill-viewport align-items-center">
+    <div class="col-12">
+    <div class="col-12 col-md-6">
     <h1 class="text-white">Coding on steroids</h1>
     <p class="lead text-white-70">Stop hiring engineers to write your code. Just use the 1kb script that magically solves all your problems and algorithms.</p>
-    <a href="#" role="button">Try it yesterday</a>
-      </div>
-      </div>
-    </div>
+    <a class="btn btn-warning" href="#" role="button">Try it yesterday</a>
