--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
- </div>
-    <div class="col">
-      <h6 class="text-uppercase text-black-40">
-        million dollar info
-          million dollar info
-      </h6>
-      <h2>We do what our competitors do, but with 500% more</h2>
-      <p>Sed ut perspiciatis unde omnis iste natus error
+ <p>Sed ut perspiciatis unde omnis iste natus error
+      sit voluptatem accusantium doloremque laudantium,
+      totam rem aperiam..</p>
+      <div class="row">
+      <div class="d-none d-md-block col">
+        <h5>killer feature</h5>
+        <p>veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <a href="#" class="d-block">learn more</a>
+        </div>
+      <div class="d-none d-lg-block col">
+        <h5>second killer feature</h5>
+        <p>veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <a href="#" class="d-block">learn more</a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
