--- a/index.html
+++ b/index.html
@@ -1,13 +1,155 @@
-   </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <!—Необходимые мета теги -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" type="text/css" href="style.css">
+
+  <!—Bootstrap стили CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"crossorigin="anonymous">
+  </head>  
+  <body>
+  <section id="introduction">
+    <div class="container">
+    <div class="row fill-viewport align-items-center">
+    <div class="col-12 col-md-6">
+    <h1 class="text-white">Coding on steroids</h1>
+    <p class="lead text-white-70">Stop hiring engineers to write your code. Just use the 1kb script that magically solves all your problems and algorithms.</p>
+    <a class="btn btn-warning" href="#" role="button">Try it yesterday</a>
+      </div>
+      </div>
+    </div>
+</section>
+  <section id="info--1">
+    <div class="container">
+    <div class="row pt-5 align-items-center">
+    <div class="col d-none d-md-block align-self-end">
+    <img src="phone.png" class="img-fluid"/>
+    </div>
+    <div class="col">
+      <h6 class="text-uppercase text-black-40">
+          million dollar info
+      </h6>
+      <h2>We do what our competitors do, but with 500% more</h2>
+      <p>Sed ut perspiciatis unde omnis iste natus error
+      sit voluptatem accusantium doloremque laudantium,
+      totam rem aperiam..</p>
+      <div class="row">
+      <div class="d-none d-md-block col">
+        <h5>killer feature</h5>
+        <p>veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <a href="#" class="d-block">learn more</a>
+<head>
+    <script src="https://kit.fontawesome.com/51a8aba043.js" crossorigin="anonymous"></script>
+    <!—Необходимые мета теги -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!—Bootstrap стили CSS -->
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+                integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+                crossorigin="anonymous">
+            <link href="style/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <section id="introduction">
+        <div class="container">
+            <div class="row fill-viewport align-items-center">
+                <div class="col-12  col-md-6">
+                    <h1 class="text-white">Coding on steroids</h1>
+                    <p class="lead text-white-70">Stop hiring engineers to write your code. Just use the 1kb script that
+                        magically solves all your problems and algorithms.</p>
+                    <a class="btn btn-primary" href=" #" role="button">Try it yesterday</a>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section id="info--1">
+        <div class="container">
+            <div class="row pt-5 align-items-center">
+                <div class="col d-none d-md-block align-self-end">
+                    <img src="img/phone.png" class="img-fluid" />
+                </div>
+                <div class="col">
+                    <h6 class="text-uppercase text-black-40">
+                        million dollar info
+                    </h6>
+                    <h2>We do what our competitors do, but with 500% more</h2>
+                    <p>Sed ut perspiciatis unde omnis iste natus error
+                        sit voluptatem accusantium doloremque laudantium,
+                        totam rem aperiam..</p>
+                    <div class="row">
+                        <div class="d-none d-md-block col">
+                            <h5>killer feature</h5>
+                            <p>veritatis et quasi architecto beatae vitae
+                                dicta sunt explicabo.</p>
+                            <a href="#" class="d-block">learn more</a>
+                        </div>
+                        <div class="d-none d-lg-block col">
+                            <h5>second killer feature</h5>
+                            <p>veritatis et quasi architecto beatae vitae
+                                dicta sunt explicabo.</p>
+                            <a href="#" class="d-block">learn more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      <div class="d-none d-lg-block col">
+        <h5>second killer feature</h5>
+        <p>veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <a href="#" class="d-block">learn more</a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+    </section>
+
+  </section>
+  <section id="info-2" class="bg-dark">
+    <section id="info-2" class="bg-dark">
+        <div class="container">
+            <div class="row align-items-center fill-80-viewport">
+                <div class="col-12 col-md-6 my-5 order-2 order-md-1">
+                    <p class="text-uppercase text-white-40"><strong>faster development</strong></p>
+                    <h2 class="text-white">Coding has never been this fast. It's almost magical</h2>
+                    <p class="lead text-white-70">Stop hiring engineers to write your code.
+                        Just install one script that magically solves all your problems.</p>
+                    <a class="btn btn-light d-block d-md-inline-block py-3" href="#" role="button">Read the docs</a>
+                </div>
+                <pre class="col-12 col-md-6 my-5 order-1 order-md-2 py-4 border border-info rounded text-info">
+             <span>1</span> <span> //codingSteroids.js</span> 
+             <span>2</span>
+             <span>3</span>   const data = {
+             <span>4</span>     "purpose": {
+             <span>5</span>     "getId": "#element",
+             <span>6</span>     "companyName": "coolStartup",
+             <span>7</span>   }
+             <span>8</span> }
+             <span>9</span>   
+             <span>10</span>   function codingSteroids(  
+             <span>11</span>    data,
+             <span>12</span>    getSteroidsType
+             <span>13</span>   ) 
+             <span>14</span>  
+             <span>15</span>   function getSteroidsType() {
+             <span>16</span>  return "codeHellish!"
+             <span>17</span>   }
+             </pre>
+            </div>
         </div>
     </section>
-  <section id="info--3"></section>
-  <section id="featured-on"></section>
-  <section id="feature-rundown"></section>
-  <section id="pricing"></section>
-  <section id="footer"></section>
   <section id="info--3">
     <div class="container">
+
+
+    <section id="info-3">
+        <div class="container">
             <div class="row fill-80-viewport align-items-center justify-content-end text-white">
                 <div class="col-12 basis-md-50">
                     <h6 class="text-white-40">
@@ -21,6 +163,9 @@
         </div>
   </section>
   <section id="featured-on" class="bg-primary">
+    </section>
+
+    <section id="featured-on" class="bg-primary">
         <div class="container">
             <div class="row py-5 text-center text-white">
                 <div class="col-12">
@@ -38,6 +183,9 @@
   </section>
   <section id="feature-rundown">
      <section id="feature-rundown">
+    </section>
+
+    <section id="feature-rundown">
         <div class="container">
             <div class="row mt-5">
                 <div class="col-12 col-md-6 mx-auto mt-5 text-center">
@@ -50,6 +198,7 @@
             <div class="row mb-5">
                 <div class="col-12 col-md-4 text-center">
                     <img src="tov.png" class="mt-4" />
+                    <img src="img/tov.png" class="mt-4" />
                     <p>
                         <strong class="text-info">24/7 support</strong> For
                         your sake, we do not sleep.
@@ -57,30 +206,35 @@
                 </div>
                 <div class="col-12 col-md-4 text-center">
                     <img src="tov.png" class="mt-4" />
+                    <img src="img/tov.png" class="mt-4" />
                     <p>
                         <strong class="text-info">Fast</strong> Like flash.
                     </p>
                 </div>
                 <div class="col-12 col-md-4 text-center">
                     <img src="tov.png" class="mt-4" />
+                    <img src="img/tov.png" class="mt-4" />
                     <p>
                         <strong class="text-info">Reliable</strong> We never have a server downtime.
                     </p>
                 </div>
                 <div class="col-12 col-md-4 text-center">
                     <img src="tov.png" class="mt-4" />
+                    <img src="img/tov.png" class="mt-4" />
                     <p>
                         <strong class="text-info">Computational Analysis</strong> like no other.
                     </p>
                 </div>
                 <div class="col-12 col-md-4 text-center">
                     <img src="tov.png" class="mt-4" />
+                    <img src="img/tov.png" class="mt-4" />
                     <p>
                         <strong class="text-info">Analytics</strong> like no other.
                     </p>
                 </div>
                 <div class="col-12 col-md-4 text-center mb-5">
                     <img src="tov.png" class="mt-4" />
+                    <img src="img/tov.png" class="mt-4" />
                     <p>
                         <strong class="text-info">Affordable</strong> as coffee.
                     </p>
@@ -90,6 +244,10 @@
   </section>
   <section id="pricing" class="bg-light"  >
      <div class="container fill-80-viewport">
+    </section>
+
+    <section id="pricing" class="bg-light">
+        <div class="container fill-80-viewport">
             <div class="row">
                 <div class="col-12 col-md-6 mx-auto text-center my-5">
                     <h6 class="text-black-40 text-uppercase">
@@ -114,7 +272,6 @@
                     </ul>
                     <a class="btn btn-block btn-primary border-0 text-white py-3" href="#">Start</a>
                 </div>
-
                 <div class="col-12 col-md-4 px-2 my-4 text-center">
                     <h6 class="text-black-40 text-uppercase">
                         Business
@@ -131,7 +288,6 @@
                     </ul>
                     <a class="btn btn-block btn-primary border-0 text-white py-3" href="#">Start</a>
                 </div>
-
                 <div class="col-12 col-md-4 px-2 my-4 text-center">
                     <h6 class="text-black-40 text-uppercase">
                         Corporate
@@ -152,6 +308,10 @@
   </section>
   <section id="footer" class="bg-dark">
      <div class="container">
+    </section>
+
+    <section id="footer" class="bg-dark">
+        <div class="container">
             <div class="row fill-40-viewport py-5 text-white-70 align-items-center">
                 <div class="col-12 col-md-6">
                     <ul class="list-unstyled">
@@ -208,3 +368,8 @@
 
   <div class="container"></div>
   </body>
+</html>
+    <div class="container"></div>
+</body>
+
+</html>
